--- a/views/articles-page.handlebars
+++ b/views/articles-page.handlebars
@@ -1,7 +1,7 @@
 <div class="text-center">
     <h2>{{title}}</h2>
     <p>{{content}}</p>
-    <p>Created by {{users.user_name}} on {{format_date date_created}}</p>
+    <p>Created by {{users.user_name}} on {{format_date createdAt}}</p>
     <p>
         <button class="btn btn-primary">Add a comment</button>
     </p>
