--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-auto">
-        <h2>Welcome, {{user_name}}!</h2>
+        <h2>Welcome, {{userDashboard.user_name}}!</h2>
     </div>
 </div>
 
@@ -28,22 +28,22 @@
         </form> --}}
     </div>
 
-    {{#if articles.length}}
-    <div class="col-md-6 project-list">
+    {{!-- {{#if userDashboard.[0].articles}} --}}
+    <div class="col-md-6 article-list">
         <h3>Current Articles:</h3>
 
-        {{#each articles as |article|}}
+        {{#each userDashboard}}
         <div class="row mb-2">
             <div class="col-md-8">
-                <h4><a href="/project/{{article.id}}">{{article.title}}</a></h4>
+                <h4><a href="/articles/{{this.id}}">{{this.title}}</a></h4>
             </div>
             <div class="col-md-4">
-                <button class="btn btn-sm btn-danger" data-id="{{article.id}}">DELETE</button>
+                <button class="btn btn-sm btn-danger" data-id="{{this.id}}">Delete Article</button>
             </div>
         </div>
         {{/each}}
     </div>
-    {{/if}}
+    {{!-- {{/if}} --}}
 </div>
 
-<script src="./js/dashboard.js"></script>
+{{!-- <script src="./js/dashboard.js"></script> --}}
