--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TheBlog!</title>
-    <!--<link rel="stylesheet" href="/css/jass.css">
-    <link rel="stylesheet" href="/css/style.css"> -->
+    <!--<link rel="stylesheet" href="/css/jass.css"> -->
+    <link rel="stylesheet" href="/css/style.css"> 
 </head>
 
 <body>
@@ -17,13 +17,11 @@
             </h1>
             <nav>
                 <!-- Conditionally render login or logout links -->
-                {{#if logged_in}}
                 <a href="/">Home</a> |
                 <a href="/dashboard">Dashboard</a> |
+                {{#if loggedIn}}
                 <button class="no-button" id="logout">Logout</button>
                 {{else}}
-                <a href="/">Home</a> |
-                <a href="/dashboard">Dashboard</a> |
                 <a href="/login">Login</a>
                 {{/if}}
             </nav>
@@ -38,7 +36,7 @@
     </div>
 
     <!-- Render script for logged in users only -->
-    {{#if logged_in}}
+    {{#if loggedIn}}
     <script src="/js/logout.js"></script>
     {{/if}}
 </body>
