--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-auto">
-        <h2>Welcome, {{userDashboard.user_name}}!</h2>
+        <h2>Welcome, {{this.user}}!</h2>
     </div>
 </div>
 
@@ -28,7 +28,6 @@
         </form> --}}
     </div>
 
-    {{!-- {{#if userDashboard.[0].articles}} --}}
     <div class="col-md-6 article-list">
         <h3>Current Articles:</h3>
 
@@ -43,7 +42,6 @@
         </div>
         {{/each}}
     </div>
-    {{!-- {{/if}} --}}
 </div>
 
-{{!-- <script src="./js/dashboard.js"></script> --}}
+<script src="./js/dashboard.js"></script>
