--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ header,
     border: none;
     padding: 0;
     cursor: pointer;
-    color: #000000;
+    color: #1b89bc;
     text-decoration: none;
     font-size: 100%;
 }
