--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -13,17 +13,19 @@
 </div>
 <div class="col-md-12">
     <h3>Current Articles:</h3>
-
+<div class="row">
     {{#each userDashboard}}
-        <div class="row">
-            <div class="col-md-8">
-                <h5><a href="/articles/{{this.id}}">{{this.title}}</a></h5>
-            </div>
-            <div class="col-md-4">
-                <a href="/dashboard/edit/{{this.id}}" type="button" class="btn btn-warning">Edit</a>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title"><a href="/articles/{{this.id}}">{{this.title}}</a></h5>
+                    <p class="card-text">{{this.content}}</p>
+                    <a href="/dashboard/edit/{{this.id}}" type="button" class="btn btn-sm btn-warning float-right">Edit</a>
+                </div>
             </div>
         </div>
     {{/each}}
+</div>
 </div>
 
 
