updated public, route and view folders related to updating article content, safe revert point

--- a/views/edit-article.handlebars
+++ b/views/edit-article.handlebars
@@ -16,5 +16,5 @@
         <button class="btn btn-danger article-list" data-id="{{editArticle.id}}">Delete Article</button>
     </form>
 
-<script src="/js/delete-articles.js"></script>
-<script src="/js/edit-articles.js"></script>
+<script src="/js/delete-article.js"></script>
+<script src="/js/edit-article.js"></script>
