replaced placeholder content with real content for webpage, safe revert point

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,7 @@
 <!-- Loop over each object in the articles array -->
 <div class="row text-center">
     <div class="col-auto">
-        <h2>Welcome!</h2>
+        <h2>Wubba Lubba Dub Dub!</h2>
         <p>Check out articles from our bloggers!</p>
     </div>
 </div>
