--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 <div class="row text-center">
     <div class="col-auto">
-        <h2>Welcome, {{user_name}}!</h2>
+        <h2>Are you ready to get schwifty, {{user_name}}?</h2>
     </div>
 </div>
 
