--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,7 +13,7 @@
     <div class="flex-column justify-space-around">
         <header class="display-flex justify-space-between align-center p-2">
             <h1>
-                <a href="/">The Blog!</a>
+                <a href="/">The Rick and Morty Blog!</a>
             </h1>
             <nav>
                 <!-- Conditionally render login or logout links -->
